Fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #836131;
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 code {
